--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@
     background-color: var(--grey);
 }
 
-main {
+.main-outlet {
     flex-grow: 1;
     margin-top: 30px;
-    padding: 0 20px;
+    padding: 0 20px 40px 20px;
 }
