--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
