--- a/src/components/styles/CrmInfo.css
+++ b/src/components/styles/CrmInfo.css
@@ -1,13 +1,18 @@
 .crminfo-subtitle {
     font-size: 1.25rem;
     color: var(--dark-blue);
-    font-weight: 600;
-    padding: 10px 10px 0 10px;
+    font-weight: 400;
+    padding: 10px 20px 0 20px;
     border-top: 1px solid var(--black);
 }
 
 .crminfo-info {
+    display: block;
     font-size: 1.125rem;
     color: var(--black);
-    padding: 5px 10px 0 20px;
+    margin: 10px 20px;
+    background-color: var(--grey);
+    border: 1px solid var(--black);
+    padding: 10px;
+    border-radius: 5px;
 }
