--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,36 @@
     background-color: var(--grey);
 }
 
+.header-app {
+    display: none;
+    background-color: var(--dark-blue);
+    padding: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-logo {
+    max-width: 80px;
+}
+
+.header-app svg {
+    color: var(--white);
+    font-size: 2.5rem;
+    cursor: pointer;
+}
+
 .main-outlet {
     flex: 1;
     margin-top: 30px;
     padding: 0 20px 40px 20px;
+}
+
+@media screen and (max-width: 768px) {
+    .App {
+        flex-direction: column;
+    }
+
+    .header-app {
+        display: flex;
+    }
 }
