--- a/src/components/styles/SearchCRM.css
+++ b/src/components/styles/SearchCRM.css
@@ -10,17 +10,14 @@
     color: var(--dark-blue);
     font-weight: 400;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .search-form {
-    display: grid;
-    /* flex-direction: row;
-    flex-wrap: wrap; */
-
-    align-items: center;
-
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 70%;
     background-color: var(--white);
     border: 1px solid var(--black);
     padding: 20px;
@@ -44,6 +41,7 @@
     outline-color: var(--dark-blue);
 
     color: var(--black);
+    margin-bottom: 10px;
 }
 
 .search-form button {
@@ -53,6 +51,7 @@
     cursor: pointer;
     font-size: 1.125rem;
     padding: 10px;
+    margin-top: 20px;
     width: 50%;
     margin: 0 auto;
 
@@ -71,4 +70,10 @@
     flex-wrap: wrap;
     gap: 20px;
     justify-content: space-around;
+}
+
+@media screen and (max-width: 550px) {
+    .search-form {
+        width: 100%;
+    }
 }
