--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: var(--grey);
+}
+
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
