--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,4 +1,23 @@
+.navbar-header {
+    display: none;
+    background-color: var(--dark-blue);
+    padding: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar-header-logo {
+    width: 80px;
+}
+
+.navbar-header svg {
+    color: var(--white);
+    font-size: 2.5rem;
+    cursor: pointer;
+}
+
 .navbar-container {
+    display: none;
     background-color: var(--dark-blue);
     max-width: 300px;
     min-height: 100vh;
@@ -55,13 +74,28 @@
 }
 
 @media screen and (max-width: 768px) {
+    .navbar-header {
+        display: flex;
+    }
+    
     .navbar-container {
         position: fixed;
-        right: 0;
+        right: -500px;
         top: 81px;
+    }
+
+    .navbar-container.active {
+        right: 0;
     }
 
     .navbar-logo {
         display: none;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .navbar-container {
+        padding: 30px 10px;
+        max-width: 240px;
     }
 }
