--- a/src/pages/styles/Newcrm.css
+++ b/src/pages/styles/Newcrm.css
@@ -39,7 +39,9 @@
     color: var(--grey);
 }
 
-.newcrm-fieldset-wrapper, .newcrm-fieldset-files {
+.newcrm-fieldset-wrapper,
+.newcrm-fieldset-files,
+.newcrm-fieldset-department {
     padding: 0 30px 30px 30px;
 }
 
@@ -79,7 +81,8 @@
     color: var(--black);
 }
 
-.newcrm-fieldset-files {
+.newcrm-fieldset-files,
+.newcrm-fieldset-department {
     margin-top: 20px;
     display: flex;
     flex-direction: row;
@@ -92,7 +95,8 @@
     font-size: 1.125rem;
 }
 
-.files-label {
+.files-label,
+.department-select {
     background-color: var(--black);
     border-radius: 5px;
     color: var(--white);
@@ -132,6 +136,14 @@
     border-bottom-right-radius: 5px;
 }
 
+.newcrm-fieldset-department label {
+    display: block;
+
+    font-size: 1.125rem;
+    font-weight: 400;
+    color: var(--black);
+}
+
 .newcrm-button {
     background-color: var(--dark-blue);
     border-radius: 5px;
@@ -158,7 +170,9 @@
         width: 100%;
     }
 
-    .newcrm-fieldset-wrapper, .newcrm-fieldset-files {
+    .newcrm-fieldset-wrapper,
+    .newcrm-fieldset-files,
+    .newcrm-fieldset-department {
         padding: 0 15px 15px 15px;
     }
 }
