Loading user CRMs from API

--- a/src/pages/styles/Newcrm.css
+++ b/src/pages/styles/Newcrm.css
@@ -77,6 +77,8 @@
     outline-color: var(--dark-blue);
     resize: vertical;
 
+    height: 150px;
+
     font-weight: 400;
     color: var(--black);
 }
