--- a/src/components/styles/CardCRM.css
+++ b/src/components/styles/CardCRM.css
@@ -33,6 +33,7 @@
     border-radius: 5px;
     border: 1px solid var(--black);
     color: var(--black);
+    height: 100%;
     max-height: 190px;
     text-align: justify;
     overflow: hidden;
