--- a/src/pages/styles/Newcrm.css
+++ b/src/pages/styles/Newcrm.css
@@ -139,7 +139,8 @@
 
 .newcrm-fieldset-department {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
@@ -150,6 +151,22 @@
     width: 100%;
     border: 1px solid var(--black);
     cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+    flex: 1;
+    transition: 0.6s;
+}
+
+.department-option:hover {
+    background-color: #c4d0e1;
+}
+
+.department-option > svg {
+    color: var(--dark-blue);
+    font-size: 2rem;
 }
 
 .newcrm-button {
