--- a/src/pages/styles/Crm.css
+++ b/src/pages/styles/Crm.css
@@ -124,6 +124,99 @@
     background-color: var(--second-dark-blue);
 }
 
+.crm-decision {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    width: 80%;
+    margin: 20px;
+
+    border-radius: 5px;
+    background-color: var(--white);
+    padding: 20px;
+    border: 1px solid var(--black);
+}
+
+.crm-decision-title {
+    text-align: center;
+    color: var(--black);
+}
+
+.crm-decision-buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.crm-decision-accept, .crm-decision-reject {
+    padding: 12px;
+    border-radius: 5px;
+
+    color: var(--grey);
+    text-decoration: none;
+    font-size: 1.125rem;
+    flex: 1;
+
+    transition: .6s;
+    cursor: pointer;
+}
+
+.crm-decision-accept {
+    background-color: #43924B;
+}
+
+.crm-decision-reject {
+    background-color: #924343;
+}
+
+.crm-decision-form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.crm-decision-form label {
+    font-size: 1.25rem;
+    color: var(--black);
+    text-align: center;
+}
+
+.crm-decision-form textarea {
+    background-color: var(--grey);
+    border-radius: 5px;
+    border: 1px solid var(--black);
+    padding: 10px;
+    font-size: 1rem;
+    width: 100%;
+    outline-color: var(--dark-blue);
+    resize: vertical;
+
+    height: 150px;
+
+    font-weight: 400;
+    color: var(--black);
+}
+
+.crm-decision-submit {
+    padding: 12px;
+    border-radius: 5px;
+
+    color: var(--grey);
+    text-decoration: none;
+    font-size: 1.25rem;
+    width: 60%;
+    align-self: center;
+    
+    background-color: var(--dark-blue);
+
+    transition: .6s;
+    cursor: pointer;
+}
+
+.crm-decision-submit:hover {
+    background-color: var(--second-dark-blue);
+}
+
 @media screen and (max-width: 550px) {
     .crm-aware-item {
         display: grid;
@@ -134,10 +227,14 @@
     .crm-aware-img {
         justify-self: center;
     }
+
+    .crm-decision-buttons {
+        flex-direction: column;
+    }
 }
 
-@media screen and (max-width: 768px) {
-    .crm-wrapper {
+@media screen and (max-width: 1024px) {
+    .crm-wrapper, .crm-decision {
         width: 100%;
     }
 }
