--- a/src/pages/styles/Crm.css
+++ b/src/pages/styles/Crm.css
@@ -148,25 +148,35 @@
     gap: 20px;
 }
 
-.crm-decision-accept, .crm-decision-reject {
+.crm-decision-option {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+
     padding: 12px;
     border-radius: 5px;
 
-    color: var(--grey);
-    text-decoration: none;
-    font-size: 1.125rem;
+    font-size: 1.25rem;
     flex: 1;
 
     transition: .6s;
     cursor: pointer;
+
+    color: var(--grey);
 }
 
-.crm-decision-accept {
+.crm-decision-option.accept {
     background-color: #43924B;
 }
 
-.crm-decision-reject {
+.crm-decision-option.reject {
     background-color: #924343;
+}
+
+.crm-decision-buttons svg {
+    font-size: 2rem;
 }
 
 .crm-decision-form {
