--- a/src/pages/styles/Profile.css
+++ b/src/pages/styles/Profile.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 20px;
+    row-gap: 10px;
 }
 
 .profile-title {
@@ -15,6 +15,12 @@
 .profile-name {
     color: var(--black);
     font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.profile-deparment {
+    color: var(--black);
+    font-size: 1.25rem;
     font-weight: 400;
 }
 
