--- a/src/components/styles/AwareCRM.css
+++ b/src/components/styles/AwareCRM.css
@@ -13,31 +13,17 @@
     column-gap: 30px;
 }
 
-.awarecrm-form-input, .awarecrm-form-button {
+.awarecrm-form-input {
     background-color: var(--white);
     border: 1px solid var(--black);
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 10px;
     font-size: 1rem;
     width: 100%;
     outline-color: var(--dark-blue);
 
     font-weight: 400;
     color: var(--black);
-}
-
-.awarecrm-form-button {
-    width: 70px;
-    font-size: 2rem;
-    display: flex;
-    justify-content: center;
-    color: var(--dark-blue);
-    cursor: pointer;
-    transition: .6s;
-}
-
-.awarecrm-form-button:hover {
-    color: var(--blue);
 }
 
 .awarecrm-cards {
