--- a/src/pages/styles/Profile.css
+++ b/src/pages/styles/Profile.css
@@ -24,6 +24,15 @@
     font-weight: 400;
 }
 
+.profile-image {
+    width: 100%;
+    height: 100%;
+    max-width: 150px;
+    max-height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 .profile-form {
     row-gap: 10px;
     display: flex;
@@ -76,6 +85,6 @@
 
 @media screen and (max-width: 768px) {
     .profile-form {
-        width: 80%;
+        width: 100%;
     }
 }
