--- a/src/pages/styles/Crm.css
+++ b/src/pages/styles/Crm.css
@@ -36,10 +36,6 @@
     flex-direction: column;
 }
 
-.crm-article > div {
-    border-top: 1px solid var(--black);
-}
-
 .crm-article-title {
     font-size: 1.5rem;
     color: var(--white);
@@ -71,22 +67,15 @@
 .crm-aware-list {
     display: flex;
     flex-direction: column;
-    padding: 20px;
 }
 
 .crm-aware-item {
-    display: grid;
+    display: flex;
     gap: 10px;
     background-color: var(--grey);
-    grid-template-columns: 1fr 2fr 40px;
-    border: 1px solid var(--black);
-    align-items: center;
-    padding: 10px;
-}
-
-.crm-aware-item:first-child {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    flex-direction: column;
+    border-top: 1px solid var(--black);
+    padding: 20px;
 }
 
 .crm-aware-item:last-child {
@@ -96,8 +85,26 @@
 
 .crm-aware-department {
     color: var(--dark-blue);
+    text-align: center;
     font-weight: 600;
-    font-size: 1.125rem;
+    font-size: 1.25rem;
+}
+
+.crm-aware-wrapper {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--black);
+    border-radius: 5px;
+    padding: 10px;
+    gap: 15px;
+}
+
+.crm-aware-decision {
+    display: flex;
+    gap: 15px;
+    border-bottom: 1px solid var(--black);
+    align-items: center;
+    padding: 5px;
 }
 
 .crm-aware-user {
@@ -105,9 +112,14 @@
     font-size: 1.125rem;
 }
 
+.crm-aware-comment {
+    color: var(--black);
+    font-size: 1.125rem;
+    margin-left: 5px;
+}
+
 .crm-aware-img {
     font-size: 2rem;
-    justify-self: end;
 }
 
 .aware-accepted {
@@ -265,10 +277,12 @@
 }
 
 @media screen and (max-width: 550px) {
+    .crm-article-flex {
+        flex-direction: column;
+    }
+
     .crm-aware-item {
-        display: grid;
-        grid-template-columns: 1fr;
-        justify-items: center;
+        padding: 10px 10px 15px 10px;
     }
 
     .crm-aware-img {
