--- a/src/pages/styles/Crm.css
+++ b/src/pages/styles/Crm.css
@@ -12,8 +12,58 @@
     text-align: center;
 }
 
+.crm-versions {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    align-items: center;
+    gap: 10px;
+}
+
+.crm-versions-title {
+    font-size: 1.5rem;
+    color: var(--dark-blue);
+    font-weight: 400;
+}
+
+.crm-versions-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.crm-versions-link {
+    padding: 10px 15px;
+    border: 1px solid var(--black);
+    background-color: var(--white);
+    border-radius: 5px;
+    text-decoration: none;
+    color: var(--black);
+    font-size: 1.25rem;
+    cursor: pointer;
+    transition: .6s;
+}
+
+.crm-versions-link.active {
+    background-color: var(--dark-blue);
+    color: var(--white);
+}
+
+.crm-versions-link:hover {
+    background-color: #d1d1d1;
+}
+
+.crm-versions-link.active:hover {
+    background-color: var(--second-dark-blue);
+}
+
 .crm-wrapper {
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
 
 .crm-article-flex {
@@ -22,7 +72,7 @@
     justify-content: space-around;
 }
 
-.crm-article-flex > div {
+.crm-article-flex>div {
     flex: 1;
 }
 
@@ -30,8 +80,6 @@
     border: 1px solid var(--black);
     border-radius: 5px;
     background-color: var(--white);
-
-    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
 }
@@ -67,59 +115,58 @@
 .crm-aware-list {
     display: flex;
     flex-direction: column;
+    background-color: var(--white);
+    border-radius: 5px;
 }
 
 .crm-aware-item {
     display: flex;
     gap: 10px;
-    background-color: var(--grey);
     flex-direction: column;
     border-top: 1px solid var(--black);
     padding: 20px;
 }
 
-.crm-aware-item:last-child {
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+
+.crm-aware-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: var(--grey);
+    border: 1px solid var(--black);
+    border-radius: 5px;
+    padding: 15px 10px;
+    gap: 15px;
 }
 
 .crm-aware-department {
     color: var(--dark-blue);
-    text-align: center;
     font-weight: 600;
     font-size: 1.25rem;
-}
-
-.crm-aware-wrapper {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid var(--black);
-    border-radius: 5px;
-    padding: 10px;
-    gap: 15px;
-}
-
-.crm-aware-decision {
-    display: flex;
-    gap: 15px;
-    border-bottom: 1px solid var(--black);
-    align-items: center;
-    padding: 5px;
+    grid-column: 1 / 2;
 }
 
 .crm-aware-user {
     color: var(--black);
     font-size: 1.125rem;
+    grid-column: 1 / 3;
+    justify-self: center;
 }
 
 .crm-aware-comment {
     color: var(--black);
     font-size: 1.125rem;
-    margin-left: 5px;
+    grid-column: 1 / 3;
+    border: 1px solid var(--black);
+    border-radius: 5px;
+    padding: 10px;
 }
 
 .crm-aware-img {
     font-size: 2rem;
+    grid-column: 2 / 3;
+    justify-self: right;
 }
 
 .aware-accepted {
@@ -148,7 +195,7 @@
     color: var(--grey);
     text-decoration: none;
     font-size: 1.25rem;
-    
+
     background-color: var(--dark-blue);
 
     transition: .6s;
@@ -233,13 +280,14 @@
     font-size: 2rem;
 }
 
-.crm-decision-form > label, .complexity-title {
+.crm-decision-form>label,
+.complexity-title {
     font-size: 1.25rem;
     color: var(--black);
     text-align: center;
 }
 
-.crm-decision-form > textarea {
+.crm-decision-form>textarea {
     background-color: var(--grey);
     border-radius: 5px;
     border: 1px solid var(--black);
@@ -265,7 +313,7 @@
     font-size: 1.25rem;
     width: 60%;
     align-self: center;
-    
+
     background-color: var(--dark-blue);
 
     transition: .6s;
@@ -285,10 +333,6 @@
         padding: 10px 10px 15px 10px;
     }
 
-    .crm-aware-img {
-        justify-self: center;
-    }
-
     .crm-decision-complexity {
         flex-direction: column;
     }
@@ -299,7 +343,9 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .crm-wrapper, .crm-decision {
+
+    .crm-wrapper,
+    .crm-decision {
         width: 100%;
     }
 }
