--- a/src/pages/styles/Newcrm.css
+++ b/src/pages/styles/Newcrm.css
@@ -191,13 +191,15 @@
 }
 
 @media screen and (max-width: 768px) {
-    .newcrm-form {
-        width: 100%;
-    }
-
     .newcrm-fieldset-wrapper,
     .newcrm-fieldset-files,
     .newcrm-fieldset-department {
         padding: 0 15px 15px 15px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .newcrm-form {
+        width: 100%;
     }
 }
