--- a/src/components/styles/SearchCRM.css
+++ b/src/components/styles/SearchCRM.css
@@ -72,7 +72,19 @@
     justify-content: space-around;
 }
 
+.search-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-around;
+}
+
 @media screen and (max-width: 550px) {
+    .search-section {
+        padding: 20px 0;
+    }
+
     .search-form {
         width: 100%;
     }
