--- a/src/pages/styles/Crm.css
+++ b/src/pages/styles/Crm.css
@@ -112,6 +112,12 @@
     margin-right: 10px;
 }
 
+.crm-article-aware {
+    width: 70%;
+    align-self: center;
+    margin-bottom: 40px;
+}
+
 .crm-aware-list {
     display: flex;
     flex-direction: column;
@@ -126,7 +132,6 @@
     border-top: 1px solid var(--black);
     padding: 20px;
 }
-
 
 .crm-aware-wrapper {
     display: grid;
@@ -145,11 +150,12 @@
     font-weight: 600;
     font-size: 1.25rem;
     grid-column: 1 / 2;
+    justify-self: center;
 }
 
 .crm-aware-user {
     color: var(--black);
-    font-size: 1.125rem;
+    font-size: 1.25rem;
     grid-column: 1 / 3;
     justify-self: center;
 }
@@ -166,7 +172,7 @@
 .crm-aware-img {
     font-size: 2rem;
     grid-column: 2 / 3;
-    justify-self: right;
+    justify-self: center;
 }
 
 .aware-accepted {
@@ -339,6 +345,18 @@
 
     .crm-decision-buttons {
         flex-direction: column;
+    }
+
+    .crm-article-aware {
+        width: 100%;
+    }
+
+    .crm-aware-department {
+        justify-self: left;
+    }
+    
+    .crm-aware-img {
+        justify-self: right;
     }
 }
 
